# hitsz-connect-verge

./: .gitignore  PRIVACY.md  README.md  README.zh-CN.md  hitsz-connect-verge.spec  installer.iss  main.py  main.spec  main_fluent.py  pyproject.toml  requirements.txt  setup.iss  setup.py
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: feature.yml  preview.yml  release.yml
app/: main.py
app/common/: resources.py  version.py
app/resources/: resources.qrc
app/resources/qss/dark/: setting_interface.qss
app/resources/qss/light/: setting_interface.qss
app/services/: update_service.py
app/utils/: config_utils.py  connection_utils.py  credential_utils.py  macos_utils.py  password_utils.py  process_utils.py  set_proxy.py  startup_utils.py  tray_utils.py
app/views/: advanced_panel.py  main_window.py  menu_utils.py
assets/: Graphicloads-Colorful-Long-Shadow-Cloud.icns  icon.icns
scripts/: clash-utils.js
utils/: advanced_panel.py  advanced_panel_fluent.py  check_for_update.py  common.py  config_utils.py  connection_utils.py  credential_utils.py  menu_utils.py  menu_utils_fluent.py  password_utils.py  set_proxy.py  startup_utils.py  tray_utils.py
