[project]
name = "hitsz-connect-verge"
version = "0.1.0"
description = "A GUI for connecting to the HITSZ Verge network."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "pyobjc>=11.0 ; sys_platform == 'darwin'",
    "pyside6>=6.8.1.1",
    "requests>=2.32.3",
]

[dependency-groups]
dev = [
  "pyinstaller>=6.11.1"
]
