[project]
name = "hitsz-connect-verge"
version = "0.1.0"
description = "A GUI for connecting to the HITSZ Verge network."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "nuitka>=2.6.8",
    "packaging>=24.2",
    "pyobjc>=11.0 ; sys_platform == 'darwin'",
    "pyside6>=6.8.1.1",
    "requests>=2.32.3",
]
