[project]
name = "hitsz-connect-verge"
version = "0.1.0"
description = "A GUI for connecting to the HITSZ Verge network."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "nuitka>=2.7.12",
    "packaging>=25.0",
    "pyobjc>=11.1; sys_platform == 'darwin'",
    "pyside6>=6.9.1",
    "requests>=2.32.4",
]
